# cms-python-fastapi-do-zero-dunossauro

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml  server.py
app/: api.py  database.py  main.py  models.py  schemas.py  security.py  settings.py
app/db/: cache.py  database.py
app/models/: user.py
app/repositories/: user.py
app/routers/: auth.py  users.py
app/schemas/: token.py  user.py
app/templates/: base.html  index.html  todo.html  users.html
app/utils/: logging.py  metrics.py  security.py  settings.py  tracing.py
config/: dashboards.yaml
config/dashboards/: fastapi-observability.json
config/grafana/: datasource.yml
config/nginx/: nginx.conf
config/prometheus/: prometheus.yml
migrations/: env.py
migrations/versions/: 9783e0f90437_alter_users_table.py  e0b030d10414_alter_users_table_aula_4.py  f339b328c1bd_create_users_table.py
tests/: conftest.py  locust.py  test_app.py  test_app_auth.py  test_app_users.py  test_auth.py  test_db.py  test_db_users.py  test_metrics.py  test_security.py  test_users.py  test_utils_security.py
tests/k6/: CMS.txt  http_all.js  http_default.js  http_user_all.js
